completed random computer pieces placed (with bug), stuck at dragging player pieces. currentIndex calculations gone haywire.

--- a/styles.css
+++ b/styles.css
@@ -51,22 +51,29 @@ h3 {
   align-items: center;
 }
 
-#panda {
+.panda {
   width: 100px;
   height: 100px;
+  background-color: rgb(244, 238, 192);
 }
-#miniPanda1,
-#miniPanda2 {
+
+.miniPanda1,
+.miniPanda2 {
   width: 50px;
   height: 50px;
+  background-color: rgb(246, 162, 59);
 }
-#bamboo {
+
+.bamboo {
   width: 50px;
   height: 150px;
+  background-color: rgb(206, 233, 250);
 }
-#bamboos {
+
+.bamboos {
   width: 100px;
   height: 150px;
+  background-color: rgb(244, 238, 192);
 }
 
 .gameContainer {
